# smart_robot

src/: bat.py  test_can.py  test_serial.py
src/auto_docking/: README.md  package.xml  setup.py
src/auto_docking/auto_docking/: __init__.py  docking_manager.py
src/auto_docking/launch/: auto_docking.launch.py
src/auto_docking/resource/: auto_docking
src/battery_pkg/: package.xml  setup.py
src/battery_pkg/battery_pkg/: battery_node.py
src/collision_detect/: package.xml  setup.cfg  setup.py
src/collision_detect/collision_detect/: collision_detect_node.py
src/collision_detect/launch/: collision_detect.launch.py
src/follow_human/: package.xml  setup.cfg  setup.py
src/follow_human/follow_human/: follow_human.py  human_position_publisher.py
src/follow_human/launch/: follow_human.launch.py
src/follow_human/rviz/: follow_human.rviz
src/line_follow/: README.md  package.xml  setup.py
src/line_follow/line_follow/: line_follower_cmdvel.py  line_follower_cmdvel_mag.py  rs485_dual_sensor_pub.py  rs485_single_sensor_pub_fast.py
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/launch/: camera_bringup.launch.py  control_robot.launch.py
src/robot_camera/: package.xml  setup.py
src/robot_description/: package.xml  setup.py
src/robot_driver/: package.xml  setup.py
src/robot_joy/: setup.py
src/robot_recognition/: CMakeLists.txt  package.xml
src/test_driver/: motor_control.py  odom.py  read_2raw.py  usb_can_a.py
src/yolov8_msgs/: CMakeLists.txt
(+25 files in other folders)
