<?xml version="1.0"?>
<package format="3">
  <name>auto_docking</name>
  <version>0.0.0</version>
  <description>Automatic docking package: navigate to charging pose and perform ultrasonic-assisted reverse docking.</description>
  <maintainer email="doanh762003@gmail.com">jetson</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
